# SnakeGame

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  run.sh
include/: Apple.hpp  Snake.hpp  UI.hpp  Utils.hpp
src/: Apple.cpp  Snake.cpp  UI.cpp  Utils.cpp  main.cpp
